2003-09-04  Bastien Nocera  <hadess@hadess.net>

	* data/sound-juicer.schemas.in:
	* src/sj-extracting.c: (filepath_parse_pattern): added %aA, %aT,
	%tT and %tA, the lowercase equivalents of %aa, %at, %tt and %ta
	so one can lowercase all his filenames and directory entries when
	ripping

2003-09-03  Ross Burton  <ross@burtonini.com>

	* src/sj-util.c:
	Handle unknown disk types as audio.

2003-09-03  Ross Burton  <ross@burtonini.com>

	* src/sj-util.c: Support FreeBSD CD-ROM ejecting (patch from Koop
	Mast <einekoai@chello.nl).

2003-09-03  Bastien Nocera  <hadess@hadess.net>

	* src/sj-main.c: (reread_cd):
	Clear the UI and don't do any lookup if the CD isn't an audio CD
	* src/sj-util.[ch]:
	Added is_audio_cd

2003-09-03  Ross Burton  <ross@burtonini.com>

	* data/sound-juicer.desktop.in: 
	Added Bugzilla information.

2003-09-02  Bastien Nocera  <hadess@hadess.net>

	* src/sj-main.c: (error_on_start), (reread_cd),
	(device_changed_cb): exit when no CD drives could be found, don't
	g_strdup_printf when gtk_message_dialog_new handles printf format
	just fine (fixes memleaks) (both patches from Jonathan Blandford
	<jrb@redhat.com>)

2003-09-02  Thomas Vander Stichele <thomas at apestaart dot org>

	* data/Makefile.am:
	print warning and continue when failing to install gconf schemas

2003-09-02  Bastien Nocera  <hadess@hadess.net>
  
	* data/sound-juicer.glade: set the extract buttons to be disabled by default

	* src/sj-main.c:
	poll for tray_is_opened every 2 seconds, clear the list when the
	tray gets opened, update the list when the tray closes (Closes:
	#notting's wishlist)

2003-09-02  Ross Burton  <ross@burtonini.com>

	* src/sj-metadata.[ch]:
	Added an abstract interface to the metadata lookup.
	* src/sj-metadata-musicbrainz.[ch]:
	Added a MusicBrainz implementation.
	* src/sj-musicbrainz.[ch]:
	Removed, deprecated by above changes.
	* src/sj-main.c:
	Use the new SjMetadata objects.

	* tests/mb-test.c:
	Updated code for new SjMetadata object.
	