@@ -1,3 +1,9 @@
+2003-09-10  Ross Burton  <ross@burtonini.com>
+
+	* src/sj-metadata-musicbrainz.c:
+	Add g_strdup()s to avoid segfaults when editing track
+	listings. Thanks to Mike Hearn.
+
 2003-09-04  Bastien Nocera  <hadess@hadess.net>
 
 	* data/sound-juicer.schemas.in:
